--- a/english.html
+++ b/english.html
@@ -511,8 +511,6 @@ Error message and password prompt
 
 <li>Downton Abbey</li>
 
-<li>Draft of 'Mein Kampf'</li>
-
 <li>Dreams that we've dreamt</li>
 
 <li>Drinking with Gura</li>
@@ -1101,7 +1099,7 @@ Error message and password prompt
 
 <li>Single parent children</li>
 
-<li>Six feet uner</li>
+<li>Six feet under</li>
 
 <li>Sliced beet</li>
 
@@ -9286,10 +9284,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20180915084635446" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20161023184709475" modified="20200910133513925" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20230520120410003" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20230510150212312" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20230520120441232" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9318,7 +9316,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20230510151109518" title="$:/temp/search">
+<div created="20161023184814872" modified="20230520122617160" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9712,14 +9710,14 @@ Going down from Rothschild, at [[59 Sheinkin St|https://www.google.co.il/maps/uv
 
  &lt;&lt;heblink [[אדמה]]&gt;&gt;</pre>
 </div>
-<div created="20191113140946887" modified="20200324165434209" tags="[[outer sisters]] films tv [[tv series]] [[Hunky Dory]]" title="Alan Ball">
+<div created="20191113140946887" modified="20230520120435135" tags="[[outer sisters]] films tv [[tv series]] [[Hunky Dory]]" title="Alan Ball">
 <pre>[img[pictures/alan-ball.jpg]]
 
 !!![[Gura]]:
 
 I made this drawing from [[that picture|https://www.npr.org/2012/08/24/160004142/alan-ball-on-leaving-true-blood-behind]] of [[Alan Ball|https://www.imdb.com/name/nm0050332/?ref_=tt_ov_wr]].
 
-Only two weeks ago I became aware of his existence, because only two weeks ago I started watching [[SIX FEET UNDER|Six feet uner]] which I enjoyed very much, and two days after I finished UNDER, I moved on to [[TRUE BLOOD|True blood]] which is an abnormal entertainment.  Now I watch a chapter of [[HERE AND NOW|https://www.imdb.com/title/tt5923012/]] every week and it keeps getting interesting. Watch [[the sweetheart|https://www.youtube.com/watch?v=hPhhF-NbUvw]].
+Only two weeks ago I became aware of his existence, because only two weeks ago I started watching [[SIX FEET UNDER|Six feet under]] which I enjoyed very much, and two days after I finished UNDER, I moved on to [[TRUE BLOOD|True blood]] which is an abnormal entertainment.  Now I watch a chapter of [[HERE AND NOW|https://www.imdb.com/title/tt5923012/]] every week and it keeps getting interesting. Watch [[the sweetheart|https://www.youtube.com/watch?v=hPhhF-NbUvw]].
 
 
  &lt;&lt;heblink [[אלן בול]]&gt;&gt;
@@ -9830,7 +9828,7 @@ She creates cosmetic medical products from natural materials. She produces the m
 
  &lt;&lt;heblink [[אנה]]&gt;&gt;</pre>
 </div>
-<div created="20211226171240168" modified="20211226171810646" tags="Films Kitchens Houses" title="Another frame from Synecdoche New York">
+<div created="20211226171240168" modified="20230520113246595" tags="Films Kitchens Houses [[Cooks are dancers]]" title="Another frame from Synecdoche New York">
 <pre>[img[pictures/anotherframefrom.jpg]]
 
 
@@ -9930,7 +9928,7 @@ I didn't dare to hear [[HATKAFAT LEV|https://www.youtube.com/watch?v=YS1C6lJImOc
 
  &lt;&lt;heblink [[מניחים ושומרים]]&gt;&gt;</pre>
 </div>
-<div created="20220919073158594" modified="20220919185732824" tags="Baking Kitchens [[True stories]] [[Stories from the future]] [[TV Series]]" title="At the bakery for instance">
+<div created="20220919073158594" modified="20230520113346809" tags="Baking Kitchens [[True stories]] [[Stories from the future]] [[TV Series]] [[Cooks are dancers]]" title="At the bakery for instance">
 <pre>[img[pictures/atthebakery.jpg]]
 
 
@@ -10008,7 +10006,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
  &lt;&lt;heblink [[תרנגול הודו אפוי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200216150039212" modified="20200502110402131" tags="[[Food addicts]] [[When they sleep]] [[Hunky Dory]] [[Palms of the hands]] [[Corona beings]] [[The estate where I grew up]] Bread" title="Baking">
+<div created="20200216150039212" modified="20230520113600181" tags="[[Food addicts]] [[When they sleep]] [[Hunky Dory]] [[Palms of the hands]] [[Corona beings]] [[The estate where I grew up]] Bread [[Cooks are dancers]]" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
 
 
@@ -11021,7 +11019,7 @@ Sometimes I ask myself, do you have a [[spirit level|https://en.wikipedia.org/wi
 
  &lt;&lt;heblink [[יסודי או ocd]]&gt;&gt;</pre>
 </div>
-<div created="20230520112454587" modified="20230520112710869" tags="Kitchens Baking [[Food addicts]]" title="Cooks are dancers">
+<div created="20230520112454587" modified="20230520113532192" tags="Kitchens Baking [[Food addicts]] [[At the bakery for instance]]" title="Cooks are dancers">
 <pre>
 [img[pictures/cooksaredancers.jpg]]
 
@@ -11306,7 +11304,7 @@ I recommend a fascinating [[interview|https://www.youtube.com/watch?v=_7jgaAfWS6
  &lt;&lt;heblink [[דליקטסן]]&gt;&gt;
 </pre>
 </div>
-<div created="20200215113637898" modified="20200605134027500" tags="Meals Coffee Restaurants [[The kitchen by Genevieve]] Bread Cafés" title="Delicatessen Chez Genevieve">
+<div created="20200215113637898" modified="20230520113818298" tags="Meals Coffee Restaurants [[The kitchen by Genevieve]] Bread Cafés [[Cooks are dancers]]" title="Delicatessen Chez Genevieve">
 <pre>[img[pictures/delicatessen.jpg]]
 
 
@@ -11319,7 +11317,7 @@ That's it, Chez Genevieve has opened its gates on the day before yesterday. I'm 
  &lt;&lt;heblink [[דליקטסן אצל ז'נבייב]]&gt;&gt;
 </pre>
 </div>
-<div created="20200813150440922" modified="20200901073826210" tags="Houses Kitchens [[Corona beings]]" title="Discipline">
+<div created="20200813150440922" modified="20230520113858690" tags="Houses Kitchens [[Corona beings]] [[Cooks are dancers]]" title="Discipline">
 <pre>[img[pictures/discipline.jpg]]
 
 !!![[Gura]]:
@@ -11384,14 +11382,6 @@ She and the hairdresser are the responsible adults in this story.
  &lt;&lt;heblink [[אחוזת דאונטון]]&gt;&gt;
 </pre>
 </div>
-<div created="20230508182815902" draft.of="Mein Kampf" draft.title="Mein Kampf" modified="20230510150206020" tags="Families Houses Closers [[True stories]] [[On the road to somewhere]]" title="Draft of 'Mein Kampf'">
-<pre>[img[pictures/meinkampf.jpg]]
-
-[[Karl Ove Knausgard]]
-
- &lt;&lt;heblink [[מאבקי]]&gt;&gt;
-</pre>
-</div>
 <div created="20200202160144751" modified="20200810181155806" tags="[[The team]] Children" title="Dreams that we've dreamt">
 <pre>[img[pictures/chalomot-shechalamnoo.jpg]]
 
@@ -11445,7 +11435,7 @@ Edith is my [[half-sister|Eva`s family tree]]. She ran away from the estate a ye
 
  &lt;&lt;heblink [[אדית]]&gt;&gt;</pre>
 </div>
-<div created="20201129151207516" modified="20201129152236092" tags="Cafés [[Here in the Ghetto]] [[Corona beings]] Restaurants Kitchens Metafiction Coffee" title="Edmund coffee">
+<div created="20201129151207516" modified="20230520114040070" tags="Cafés [[Here in the Ghetto]] [[Corona beings]] Restaurants Kitchens Metafiction Coffee cooks" title="Edmund coffee">
 <pre>[img[pictures/edmundcoffee.jpg]]
 
 
@@ -11759,7 +11749,7 @@ At the moment I saw sweet [[Angelic]] she looked beautiful to me, but I was sure
 
 </pre>
 </div>
-<div created="20200213154202937" modified="20200502115602922" tags="Kitchens [[Monkeys with car keys]] Coffee [[Life is for those who can't deal with drugs]] Bread" title="Food addicts">
+<div created="20200213154202937" modified="20230520114201811" tags="Kitchens [[Monkeys with car keys]] Coffee [[Life is for those who can't deal with drugs]] Bread [[Cooks are dancers]]" title="Food addicts">
 <pre>[img[pictures/chayot-ochel.jpg]] 
 
 !!![[The team]]:
@@ -11771,7 +11761,7 @@ At the moment I saw sweet [[Angelic]] she looked beautiful to me, but I was sure
  &lt;&lt;heblink [[חיות אוכל]]&gt;&gt;
 </pre>
 </div>
-<div created="20200406153134488" modified="20200420175935991" tags="Kitchens [[Here in the Ghetto]] Houses [[Food addicts]] [[Outer sisters]] TV" title="From Eyal Shani's kitchen">
+<div created="20200406153134488" modified="20230520114217650" tags="Kitchens [[Here in the Ghetto]] Houses [[Food addicts]] [[Outer sisters]] TV [[Cooks are dancers]]" title="From Eyal Shani's kitchen">
 <pre>[img[pictures/eyal-shani.jpg]]
 
 
@@ -11824,7 +11814,7 @@ I don't follow my neighbors, god forbidden, but I certainly see them.
 
  &lt;&lt;heblink [[מהחלון של המטבח]]&gt;&gt;</pre>
 </div>
-<div created="20210104140803643" modified="20210104141647386" tags="[[Corona beings]] [[Here in the Ghetto]] Kitchens Windows Houses" title="From the kitchen's window 2">
+<div created="20210104140803643" modified="20230520114239460" tags="[[Corona beings]] [[Here in the Ghetto]] Kitchens Windows Houses [[Cooks are dancers]]" title="From the kitchen's window 2">
 <pre>[img[pictures/kitchenswindow2.jpg]]
 
 
@@ -11934,7 +11924,7 @@ On the east side lays [[Marina quarter|Marina Zoto]], that afterwards turns into
 
  &lt;&lt;heblink [[מצפה ראשית]]&gt;&gt;</pre>
 </div>
-<div created="20200213145354960" modified="20200219171845530" tags="[[Coen sister]] Mothers [[The kitchen by Genevieve]] [[Menopause sisters]]" title="Genevieve">
+<div created="20200213145354960" modified="20230520114343051" tags="[[Coen sister]] Mothers [[The kitchen by Genevieve]] [[Menopause sisters]] [[Cooks are dancers]]" title="Genevieve">
 <pre>[img[pictures/genevieve.jpg]]
 
 
@@ -12181,7 +12171,7 @@ Also now, since I've opened this site, she hasn't stopped [[writing|Me writing]]
  &lt;&lt;heblink [[הארבעה 2]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213153541799" modified="20200426140528648" tags="[[Here in the Ghetto]] [[Outer sisters]] [[Food addicts]] Meals Restaurants [[Hunky Dory]] Families" title="HaAchim">
+<div created="20200213153541799" modified="20230520114428005" tags="[[Here in the Ghetto]] [[Outer sisters]] [[Food addicts]] Meals Restaurants [[Hunky Dory]] Families [[Cooks are dancers]]" title="HaAchim">
 <pre>[img[pictures/the-brothers.jpg]]
 
 
@@ -12209,7 +12199,7 @@ For a few days I rang with persistency to [[HaAchim]]. I really wanted Hummus, a
 
  &lt;&lt;heblink [[מכולת האחים]]&gt;&gt;</pre>
 </div>
-<div created="20200219162857382" modified="20210508135416593" tags="[[The kitchen by Genevieve]] [[Food addicts]] Kitchens [[Menopause sisters]] [[To everything there is a place]]" title="Hair up">
+<div created="20200219162857382" modified="20230520122627031" tags="[[The kitchen by Genevieve]] [[Food addicts]] Kitchens [[Menopause sisters]] [[To everything there is a place]] [[Cooks are dancers]]" title="Hair up">
 <pre>[img[pictures/searot-leachor.jpg]]
 
 !!![[Genevieve]]:
@@ -12524,7 +12514,7 @@ Yes you- killing machines, exterminating and dismissing all that's not in your f
 
  &lt;&lt;heblink [[היסטריות]]&gt;&gt;</pre>
 </div>
-<div created="20200308101509939" modified="20200308101644634" tags="[[When they sleep]] Laundry [[On the road to somewhere]]" title="I do park">
+<div created="20200308101509939" modified="20230520114522930" tags="[[When they sleep]] Laundry [[On the road to somewhere]] [[Cooks are dancers]]" title="I do park">
 <pre>[img[pictures/ani-machna.jpg]]
 
 
@@ -13624,7 +13614,7 @@ And tea is for the sick.
 
  &lt;&lt;heblink [[חומרים]]&gt;&gt;</pre>
 </div>
-<div created="20200215115312612" modified="20200219181126692" tags="Recipes [[Food addicts]] Meals" title="Matza ball soup">
+<div created="20200215115312612" modified="20230520114710374" tags="Recipes [[Food addicts]] Meals [[Cooks are dancers]]" title="Matza ball soup">
 <pre>[img[pictures/marak-im-kneydalach.jpg]]
 
 
@@ -13699,10 +13689,10 @@ I love the harmony between the food species in a meal, and most important, a mea
 
  &lt;&lt;heblink [[ארוחות]]&gt;&gt;</pre>
 </div>
-<div created="20230508182815902" modified="20230508183115958" tags="Families Houses Closers [[True stories]] [[On the road to somewhere]]" title="Mein Kampf">
+<div created="20230508182815902" modified="20230520113913294" tags="Families Houses Closers [[True stories]] [[On the road to somewhere]]" title="Mein Kampf">
 <pre>[img[pictures/meinkampf.jpg]]
 
-
+[[Karl Ove Knausgard]]
 
  &lt;&lt;heblink [[מאבקי]]&gt;&gt;
 </pre>
@@ -13737,7 +13727,7 @@ meaning
 
 </pre>
 </div>
-<div created="20200213213011829" modified="20200426140929230" tags="Mothers [[Monkeys with car keys]] Families" title="Menopause sisters">
+<div created="20200213213011829" modified="20230520114738754" tags="Mothers [[Monkeys with car keys]] Families [[Cooks are dancers]]" title="Menopause sisters">
 <pre>[img[pictures/bloot-sisters.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Menopause sisters]]&quot;&gt;&gt;
@@ -14885,7 +14875,7 @@ In the back part of the blue innocent looking warehouse on the left side of the 
 
  &lt;&lt;heblink [[רזיאל ורפאל]]&gt;&gt;</pre>
 </div>
-<div created="20210630154758774" modified="20210630155020909" tags="[[Food addicts]] Kitchens [[The kitchen by Genevieve]] Restaurants Cafés [[Corona beings]] Meals" title="Ready made delicatessen">
+<div created="20210630154758774" modified="20230520120836439" tags="[[Food addicts]] Kitchens [[The kitchen by Genevieve]] Restaurants Cafés [[Corona beings]] Meals [[Cooks are dancers]]" title="Ready made delicatessen">
 <pre>[img[pictures/readymadedelicatessen.jpg]]
 
 
@@ -14954,7 +14944,7 @@ We all inherited from [[Gura]] the tendency to pick up thrown away furniture or 
 
  &lt;&lt;heblink [[מסעדות]]&gt;&gt;</pre>
 </div>
-<div created="20200219163524836" modified="20200725182107356" tags="Kitchens Restaurants [[The kitchen by Genevieve]] [[On the road to somewhere]] [[Food addicts]] [[Hunky Dory]] Closers" title="Revision in the kitchen">
+<div created="20200219163524836" modified="20230520115456805" tags="Kitchens Restaurants [[The kitchen by Genevieve]] [[On the road to somewhere]] [[Food addicts]] [[Hunky Dory]] Closers [[Cooks are dancers]]" title="Revision in the kitchen">
 <pre>[img[pictures/revisia-bamitbach.jpg]]
 
 
@@ -15037,7 +15027,7 @@ Though, therapy speaking, I'm covered in every direction, only recently after [[
 
  &lt;&lt;heblink [[ירקות קלויים]]&gt;&gt;</pre>
 </div>
-<div created="20200218190952659" modified="20200220075051418" tags="[[Coen sister]]" title="Roger">
+<div created="20200218190952659" modified="20230520115541619" tags="[[Coen sister]] [[Sofa therapy]]" title="Roger">
 <pre>[img[pictures/5VdqSTjL1ficmZ1K.jpg]]
 
 
@@ -15128,7 +15118,7 @@ Rushell is the youngest daughter of [[Genevieve]], she was born in 2000, she's i
 
 </pre>
 </div>
-<div created="20201220133246322" modified="20201224161136485" tags="[[Food addicts]] [[Corona beings]] Bread [[Here in the Ghetto]]" title="Sabich 29">
+<div created="20201220133246322" modified="20230520115636404" tags="[[Food addicts]] [[Corona beings]] Bread [[Here in the Ghetto]] [[Cooks are dancers]]" title="Sabich 29">
 <pre>[img[pictures/sabich29.jpg]]
 
 
@@ -15335,7 +15325,7 @@ Time heals us, and now, mother and us have [[Joseph|Jozef Abaroa]] and Alfred an
  &lt;&lt;heblink [[ילדים חד הוריים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200216151750067" modified="20200725181750433" tags="TV [[TV Series]] [[Outer sisters]] [[Hunky Dory]] Families Closers" title="Six feet uner">
+<div created="20200216151750067" modified="20230520115835565" tags="TV [[TV Series]] [[Outer sisters]] [[Hunky Dory]] Families Closers" title="Six feet under">
 <pre>[img[pictures/six-feet-under.jpg]]
 
 
@@ -15403,7 +15393,7 @@ A basic first answer is: &quot;I'll think about it&quot;.
  &lt;&lt;heblink [[טיפולים מהספה]]&gt;&gt;
 </pre>
 </div>
-<div created="20200219171119429" modified="20200219174729181" tags="[[Coen sister]] Baking [[Menopause sisters]]" title="Sonia">
+<div created="20200219171119429" modified="20230520115910297" tags="[[Coen sister]] Baking [[Menopause sisters]] [[Cooks are dancers]]" title="Sonia">
 <pre>[img[pictures/sonya.jpg]]
 
 
@@ -15575,7 +15565,7 @@ What I would like to say in this true story is, the whole point is [[to drink so
 
 </pre>
 </div>
-<div created="20200219163855213" modified="20200219170137506" tags="Mothers [[The kitchen by Genevieve]] Restaurants" title="Sultana">
+<div created="20200219163855213" modified="20230520115949500" tags="Mothers [[The kitchen by Genevieve]] Restaurants [[Cooks are dancers]]" title="Sultana">
 <pre>[img[pictures/sultana.jpg]]
 
 
@@ -15765,7 +15755,7 @@ Her hair is very short, but out of her nape hair hangs a braid. She's weightly c
  &lt;&lt;heblink [[האומנית]]&gt;&gt;
 </pre>
 </div>
-<div created="20200226072300277" modified="20200605134310284" tags="[[Here in the Ghetto]] Coffee Cafés" title="The baristas here">
+<div created="20200226072300277" modified="20230520120016417" tags="[[Here in the Ghetto]] Coffee Cafés [[Cooks are dancers]]" title="The baristas here">
 <pre>[img[pictures/barista.jpg]]
 
 
@@ -15995,7 +15985,7 @@ This was our house in [[the estate where I grew up|9-side-wishing-star]].
 
 </pre>
 </div>
-<div created="20200217181158582" modified="20200428095546538" tags="Kitchens Meals Baking Families [[The estate where I grew up]]" title="The estate`s kitchen">
+<div created="20200217181158582" modified="20230520120104610" tags="Kitchens Meals Baking Families [[The estate where I grew up]] [[Cooks are dancers]]" title="The estate`s kitchen">
 <pre>[img[pictures/hamitbach-shel-hanachala.jpg]]
 
 !!![[Eva]]:
