--- a/index.html
+++ b/index.html
@@ -9372,10 +9372,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20210430202203122" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20230520122730020" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20230508183203524" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20230520122733413" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9384,7 +9384,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="אפייה [[טבחים הם רקדנים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[טבחים הם רקדנים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9404,7 +9404,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20230518182813372" title="$:/temp/search">
+<div created="20161023184814872" modified="20230520115819074" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10816,7 +10816,7 @@ Sunny one so true, I love you.//
 
 </pre>
 </div>
-<div created="20170829185439709" modified="20200813153532610" tags="[[כשהם ישנים]] כביסה [[בדרך לאן שהוא]]" title="אני מחנה">
+<div created="20170829185439709" modified="20230520120622530" tags="[[כשהם ישנים]] כביסה [[בדרך לאן שהוא]] [[טבחים הם רקדנים]]" title="אני מחנה">
 <pre>[img[pictures/ani-machna.jpg]]
 
 !!![[אווה|אווה כהן]]:
@@ -10883,7 +10883,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20230520112844108" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20230520120641357" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]] [[טבחים הם רקדנים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -12519,7 +12519,7 @@ different tastes, but there were things we both love: family, work, people in al
 
 &lt;&lt;englink [[Delicatessen]]&gt;&gt;</pre>
 </div>
-<div created="20171018115658510" modified="20200215113943524" tags="[[המטבח על פי ז'נבייב]] ארוחות מסעדות קפה [[בתי קפה]]" title="דליקטסן אצל ז'נבייב">
+<div created="20171018115658510" modified="20230520120752868" tags="[[המטבח על פי ז'נבייב]] ארוחות מסעדות קפה [[בתי קפה]] [[טבחים הם רקדנים]]" title="דליקטסן אצל ז'נבייב">
 <pre>[img[pictures/delicatessen.jpg]]
 
 !!![[ז'נבייב]]:
@@ -12528,7 +12528,7 @@ different tastes, but there were things we both love: family, work, people in al
 
 &lt;&lt;englink [[Delicatessen Chez Genevieve]]&gt;&gt;</pre>
 </div>
-<div created="20210630154608951" modified="20210630175000980" tags="מסעדות [[חיות אוכל]] [[המטבח על פי ז'נבייב]] מטבחים ארוחות [[הלכות קורונה]] הלכו" title="דליקטסן מן המוכן">
+<div created="20210630154608951" modified="20230520120809572" tags="מסעדות [[חיות אוכל]] [[המטבח על פי ז'נבייב]] מטבחים ארוחות [[הלכות קורונה]] הלכו [[טבחים הם רקדנים]]" title="דליקטסן מן המוכן">
 <pre>[img[pictures/readymadedelicatessen.jpg]]
 
 !!![[יויו]]:
@@ -12697,7 +12697,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 &lt;&lt;englink [[The K Sisters]]&gt;&gt;
 </pre>
 </div>
-<div created="20180731155632659" modified="20200215102611714" tags="[[קופים ממונעים]] אימהות" title="האחיות בלות">
+<div created="20180731155632659" modified="20230520121853095" tags="[[קופים ממונעים]] אימהות [[טבחים הם רקדנים]]" title="האחיות בלות">
 <pre>[img[pictures/bloot-sisters.jpg]]
 
 !!![[אווה]]:
@@ -12746,7 +12746,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20180702120433551" modified="20200426133836202" tags="[[אחיות חוץ]] [[חיות אוכל]] ארוחות [[כאן בגטו]] מסעדות משפחות" title="האחים">
+<div created="20180702120433551" modified="20230520122719971" tags="[[אחיות חוץ]] [[חיות אוכל]] ארוחות [[כאן בגטו]] מסעדות משפחות [[טבחים הם רקדנים]]" title="האחים">
 <pre>[img[pictures/the-brothers.jpg]]
 
 !!![[יויו]]:
@@ -12851,7 +12851,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 &lt;&lt;englink [[Harry Dean Stanton]]&gt;&gt;
 </pre>
 </div>
-<div created="20190324091820505" modified="20200330162004766" tags="[[כאן בגטו]] [[חיות אוכל]] קפה [[בתי קפה]] מטבחים [[כפות ידיים]]" title="הבריסטות שכאן">
+<div created="20190324091820505" modified="20230520122044046" tags="[[כאן בגטו]] [[חיות אוכל]] קפה [[בתי קפה]] מטבחים [[כפות ידיים]] [[טבחים הם רקדנים]]" title="הבריסטות שכאן">
 <pre>[img[pictures/barista.jpg]]
 
 !!![[תומר]]:
@@ -13595,7 +13595,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[The Hairdresser]]&gt;&gt;</pre>
 </div>
-<div created="20180315162507739" modified="20200426134135077" tags="[[אחות כהן]] [[נאמני הגנזך]] [[חיות אוכל]] משפחות" title="הצוות">
+<div created="20180315162507739" modified="20230520121010824" tags="[[אחות כהן]] [[נאמני הגנזך]] [[חיות אוכל]] משפחות [[טבחים הם רקדנים]]" title="הצוות">
 <pre>[img[pictures/hazevet.jpg]]
 
 הצוות זה אנחנו המתגוררים [[בדירה|כוכב המשאלות 01]] מחודשת חוזה השכירות, כלומר [[יויו]], [[אירי]] [[וגורה|גורה]], שבשעות הפנאי שלנו  אופים, מבשלים וכותבים את המתכונים וגם.
@@ -13986,7 +13986,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[Horse radish]]&gt;&gt;
 </pre>
 </div>
-<div created="20170620145929305" modified="20200502115542910" tags="[[קופים ממונעים]] קפה מטבחים לחם" title="חיות אוכל">
+<div created="20170620145929305" modified="20230520121725012" tags="[[קופים ממונעים]] קפה מטבחים לחם [[טבחים הם רקדנים]]" title="חיות אוכל">
 <pre>[img[pictures/chayot-ochel.jpg]] 
 
 ''אוכל שאנחנו מכינים ברגיל:''
@@ -16343,7 +16343,7 @@ We rise to play a greater part.
 &lt;&lt;englink [[Down there]]&gt;&gt;
 </pre>
 </div>
-<div created="20220919072930887" modified="20221003164400312" tags="אפייה מטבחים סדרות [[סיפורים אמיתיים]] [[סיפורים מהעתיד]]" title="למשל במאפייה">
+<div created="20220919072930887" modified="20230520122116896" tags="אפייה מטבחים סדרות [[סיפורים אמיתיים]] [[סיפורים מהעתיד]] [[טבחים הם רקדנים]]" title="למשל במאפייה">
 <pre>[img[pictures/atthebakery.jpg]]
 
 [[אימא של ג'אז]]:
@@ -16747,7 +16747,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20210104140430896" modified="20210104144127470" tags="[[הלכות קורונה]] בתים [[כאן בגטו]] מטבחים חלונות" title="מהחלון של המטבח 2">
+<div created="20210104140430896" modified="20230520122202384" tags="[[הלכות קורונה]] בתים [[כאן בגטו]] מטבחים חלונות [[טבחים הם רקדנים]]" title="מהחלון של המטבח 2">
 <pre>[img[pictures/kitchenswindow2.jpg]]
 
 !!![[תומר]]:
@@ -16772,7 +16772,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20200406152807676" modified="20200408103641432" tags="[[הלכות קורונה]] [[חיות אוכל]] [[אחיות חוץ]] טלוויזיה בתים [[כאן בגטו]] מטבחים" title="מהמטבח של אייל שני">
+<div created="20200406152807676" modified="20230520122219241" tags="[[הלכות קורונה]] [[חיות אוכל]] [[אחיות חוץ]] טלוויזיה בתים [[כאן בגטו]] מטבחים [[טבחים הם רקדנים]]" title="מהמטבח של אייל שני">
 <pre>[img[pictures/eyal-shani.jpg]]
 
 !!![[תומר]]:
@@ -17457,7 +17457,7 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Orange soup]]&gt;&gt;</pre>
 </div>
-<div created="20170924155536957" modified="20221003172146449" tags="[[חיות אוכל]] מתכונים" title="מרק עם קניידלך">
+<div created="20170924155536957" modified="20230520122310520" tags="[[חיות אוכל]] מתכונים [[טבחים הם רקדנים]]" title="מרק עם קניידלך">
 <pre>[img[pictures/marak-im-kneydalach.jpg]]
 
 !!![[יויו]]:
@@ -17879,7 +17879,7 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Technical director]]&gt;&gt;</pre>
 </div>
-<div created="20201220133232289" modified="20201224202903036" tags="[[הלכות קורונה]] [[כאן בגטו]] [[חיות אוכל]] לחם" title="סביח 29">
+<div created="20201220133232289" modified="20230520122350304" tags="[[הלכות קורונה]] [[כאן בגטו]] [[חיות אוכל]] לחם [[טבחים הם רקדנים]]" title="סביח 29">
 <pre>[img[pictures/sabich29.jpg]]
 
 
@@ -17964,7 +17964,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20170820171314166" modified="20200219164118288" tags="[[המטבח על פי ז'נבייב]] אימהות" title="סולטנה">
+<div created="20170820171314166" modified="20230520122403922" tags="[[המטבח על פי ז'נבייב]] אימהות [[טבחים הם רקדנים]]" title="סולטנה">
 <pre>[img[pictures/sultana.jpg]]
 
 !!![[יויו]]:
@@ -19134,7 +19134,7 @@ May the lord bless your soul, I love you girl
 &lt;&lt;englink [[With Yoyo in Amsterdam]]&gt;&gt;
 </pre>
 </div>
-<div created="20180214165830427" modified="20200428100854055" tags="סדרות [[אחיות חוץ]] טלוויזיה סגירים משפחות" title="עמוק באדמה">
+<div created="20180214165830427" modified="20230520115811469" tags="סדרות [[אחיות חוץ]] טלוויזיה סגירים משפחות" title="עמוק באדמה">
 <pre>[img[pictures/six-feet-under.jpg]]
 
 !!![[גורה]]:
@@ -19148,7 +19148,7 @@ May the lord bless your soul, I love you girl
 
 
 
-&lt;&lt;englink [[Six feet uner]]&gt;&gt;
+&lt;&lt;englink [[Six feet under]]&gt;&gt;
 </pre>
 </div>
 <div created="20170728194609841" modified="20200501141128041" tags="[[מטא בדיון]] [[סיפורים אמיתיים]] [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="עמליה">
@@ -20438,7 +20438,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20201129151122047" modified="20201215163106033" tags="[[בתי קפה]] [[הלכות קורונה]] [[כאן בגטו]] קפה מטבחים מסעדות [[מטא בדיון]]" title="קפה אדמונד">
+<div created="20201129151122047" modified="20230520122515144" tags="[[בתי קפה]] [[הלכות קורונה]] [[כאן בגטו]] קפה מטבחים מסעדות [[מטא בדיון]] [[טבחים הם רקדנים]]" title="קפה אדמונד">
 <pre>[img[pictures/edmundcoffee.jpg]]
 
 !!![[יויו]]:
@@ -21407,7 +21407,7 @@ Fapina''
 &lt;&lt;englink [[Green beans]]&gt;&gt;
 </pre>
 </div>
-<div created="20170820121344664" modified="20210508135321022" tags="[[המטבח על פי ז'נבייב]] מטבחים [[לכל מקום, ומתלה לכל חפץ תחת גג הבית]]" title="שערות לאחור">
+<div created="20170820121344664" modified="20230520122555506" tags="[[המטבח על פי ז'נבייב]] מטבחים [[לכל מקום, ומתלה לכל חפץ תחת גג הבית]] [[טבחים הם רקדנים]]" title="שערות לאחור">
 <pre>[img[pictures/searot-leachor.jpg]]
 
 !!![[ז'נבייב]]:
