--- a/english.html
+++ b/english.html
@@ -9296,7 +9296,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Sonia [[Coen Sisters]]" title="$:/StoryList">
+<div list="Genevieve [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9316,7 +9316,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20230615165820428" title="$:/temp/search">
+<div created="20161023184814872" modified="20230626164845916" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11515,7 +11515,7 @@ He saw himself as Eva Coen, a plumptious Hungarian pastry chef, not [[fapinalian
 
  &lt;&lt;heblink [[אווה]]&gt;&gt;</pre>
 </div>
-<div created="20200115145347212" modified="20200428095341364" tags="[[Coen sister]] Mothers [[The estate where I grew up]]" title="Eva Cohen">
+<div created="20200115145347212" modified="20230626164908833" tags="[[Coen sister]] Mothers [[The estate where I grew up]] [[Cooks are dancers]] [[Menopause sisters]] Kitchens" title="Eva Cohen">
 <pre>[img[pictures/eva-coen.jpg]]
 
 !!![[Gura]]:
@@ -11922,7 +11922,7 @@ On the east side lays [[Marina quarter|Marina Zoto]], that afterwards turns into
 
  &lt;&lt;heblink [[מצפה ראשית]]&gt;&gt;</pre>
 </div>
-<div created="20200213145354960" modified="20230520114343051" tags="[[Coen sister]] Mothers [[The kitchen by Genevieve]] [[Menopause sisters]] [[Cooks are dancers]]" title="Genevieve">
+<div created="20200213145354960" modified="20230626164937823" tags="[[Coen sister]] Mothers [[The kitchen by Genevieve]] [[Menopause sisters]] [[Cooks are dancers]] Kitchens" title="Genevieve">
 <pre>[img[pictures/genevieve.jpg]]
 
 
@@ -15391,7 +15391,7 @@ A basic first answer is: &quot;I'll think about it&quot;.
  &lt;&lt;heblink [[טיפולים מהספה]]&gt;&gt;
 </pre>
 </div>
-<div created="20200219171119429" modified="20230615170057452" tags="[[Coen sister]] Baking [[Menopause sisters]] [[Cooks are dancers]]" title="Sonia">
+<div created="20200219171119429" modified="20230626164811845" tags="[[Coen sister]] Baking [[Menopause sisters]] [[Cooks are dancers]] Kitchens" title="Sonia">
 <pre>[img[pictures/sonya.jpg]]
 
 
